--- a/workers-site/package.json
+++ b/workers-site/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@cloudflare/kv-asset-handler": "~0.1.1"
+    "@cloudflare/kv-asset-handler": "~0.1.1",
+    "cfw-express": "^1.0.0",
+    "cfw-express-static": "^1.0.2"
   }
 }
